Siguiendo con el proyecto de cero para entregar, lista navbar y cartwidget

--- a/ReactMezquidaProyectoFinal/package.json
+++ b/ReactMezquidaProyectoFinal/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactmezquidaproyectofinal",
+  "homepage": "https://mythoflorien.github.io/proyectoReactFinal-Mezquida/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
