--- a/ReactMezquidaProyectoFinal/package.json
+++ b/ReactMezquidaProyectoFinal/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.12",
     "bootstrap": "^5.3.3",
     "firebase": "^10.8.1",
